--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block container %}
 <h2>Create</h2>
-<p>Create a new record in the MongoDB database collection.</p>
+<p>start a post.</p>
 <form method="POST" action="{{ url_for('create_post') }}">
   <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
   <p>
