--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block container %}
 <h2>hi</h2>
-<p>Welcome to the Flask app. This is the home page. Here are a few links to example pages you might find interesting.
+<p>Welcome to the forum. Start your journey!
     <ul>
         <li><a href="{{ url_for('read')}}">posts</a></li>
         <li><a href="{{ url_for('create')}}">start a post</a></li>
